# coding-dojo-ia-x-data

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/commands/: contribute.md
.claude/skills/check-contribution/: SKILL.md
.claude/skills/contribute/: SKILL.md
.github/: labeler.yml  pull_request_template.md
.github/workflows/: labeler.yml  lille.yml  mission-1.yml  mission-2.yml  mission-3.yml  mission-4.yml  mission-5.yml
datalake/.minio.sys/tmp/.trash/096a3d96-bd31-4c1a-91a8-c54b2aca5dac/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/1127e772-d1d7-4ff3-be0c-aad0a7d57691/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/1bfadb0e-46a6-4500-a2c2-f8700b5c069a/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/1c973235-5172-4c3a-989d-1123218153e0/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/2f0d54d4-92c5-43d4-9fee-102a2b99717a/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/3f03337d-6505-42bf-a744-5062ef6d8aaf/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/50f35763-2ac4-4b0f-bca2-9fb339a0c16c/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/612ae130-2bde-46cd-bb4e-0108195581c7/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/66db53ff-e376-4820-a00b-d8a011cda4dc/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/6bcacd6b-2da4-4f2a-9444-82312f9686fa/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/74f312c0-59a4-496f-a5ad-c9422eb6b300/: xl.meta.bkp
docs/: exploration-workflow.md
src/exposition/: utils.py
src/ingestion/: get_file.py  main.py  write_to_storage.py
src/logger/: log_handler.py
(+9 files in other folders)
