[project]
name = "coding-dojo-ia-x-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "minio>=7.2.20",
    "python-dotenv>=1.2.2",
    "requests-cache>=1.3.1",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "just-bin>=1.49.0",
]
