[project]
name = "paris-events-analyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "minio>=7.2.15",
    "python-dotenv>=1.1.0",
    "requests-cache>=1.2.1",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "rust-just>=1.40.0",
]
